--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
       </div> -->
     </div>
     <div id="idle-upgrade" class="row justify-content-center text-center"></div>
+
+    <div class="row justify-content-center text-center">
+      <div class="col-8 bg-white rounded ">
+        <p><button onclick="buyPickaxe()" class="btn"><i class="fa fa-spoon"></i></button>Cost = 50</p>
+        <p><button onclick="buyMiner()" class="btn"><i class="fa fa-spoon"></i></button>Cost = 50</p>
+      </div>
+    </div>
+
+
   </main>
 
 
