--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+
   <link rel="stylesheet" href="style.css">
   <title>Moon Miner</title>
 </head>
@@ -27,7 +29,7 @@
         <h5>Idle Cheese per Second: 0</h5> -->
       </div>
       <div id="moon" class="col-4 text-light text-center justify-content-center">
-        <img onclick="mine()" src="https://media.giphy.com/media/aN9GqoR7OD3nq/giphy.gif" alt="">
+        <img onclick="mine()" class="" src="https://media.giphy.com/media/aN9GqoR7OD3nq/giphy.gif" alt="">
       </div>
       <div id="inventory" class="col-4  card">
         <!-- <h1>Inventory</h1>
@@ -46,12 +48,12 @@
     </div>
     <div id="idle-upgrade" class="row justify-content-center text-center"></div>
 
-    <div class="row justify-content-center text-center">
+    <!-- <div class="row justify-content-center text-center">
       <div class="col-8 bg-white rounded ">
         <p><button onclick="buyPickaxe()" class="btn"><i class="fa fa-spoon"></i></button>Cost = 50</p>
         <p><button onclick="buyMiner()" class="btn"><i class="fa fa-spoon"></i></button>Cost = 50</p>
       </div>
-    </div>
+    </div> -->
 
 
   </main>
