--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   <header class="text-center text-light">
     <h1>Moon Miner</h1>
+    <img class="img" src="miner.png" alt="">
   </header>
 
   <main class="container-fluid ">
