--- a/index.html
+++ b/index.html
@@ -17,9 +17,17 @@
 </head>
 
 <body class="bg-img note">
+  <!-- 
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12 m-height">
 
-  <header class="text-center text-light">
-    <h1>Moon Miner</h1>
+      </div>
+    </div>
+  </div> -->
+
+  <header class="text-center text-light p-5">
+    <h1 class="text-danger bigger-font ">Moon Miner</h1>
   </header>
 
   <main class="container-fluid ">
